@@ -14,6 +14,9 @@ import static com.dotcms.content.elasticsearch.business.ESIndexAPI.INDEX_OPERATI
 import com.dotcms.content.elasticsearch.business.*;
 import com.dotcms.content.elasticsearch.util.RestHighLevelClientProvider;
 import com.dotcms.content.index.IndexAPI;
+import com.dotcms.content.index.IndexTag;
+import com.dotcms.content.index.domain.Aggregation;
+import com.dotcms.content.index.domain.DotSearchException;
 import com.dotcms.enterprise.LicenseUtil;
 import com.dotcms.enterprise.license.LicenseLevel;
 import com.dotcms.enterprise.priv.util.SearchSourceBuilderUtil;
@@ -57,6 +60,8 @@ import org.elasticsearch.action.search.SearchResponse;
 import org.elasticsearch.action.support.WriteRequest.RefreshPolicy;
 import org.elasticsearch.client.RequestOptions;
 import org.elasticsearch.client.RestHighLevelClient;
+import org.elasticsearch.client.core.CountRequest;
+import org.elasticsearch.client.core.CountResponse;
 import com.dotcms.content.index.domain.CreateIndexStatus;
 import org.elasticsearch.common.text.Text;
 import org.elasticsearch.common.unit.TimeValue;
@@ -64,7 +69,6 @@ import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.elasticsearch.search.SearchHit;
 import org.elasticsearch.search.SearchHits;
-import org.elasticsearch.search.aggregations.Aggregation;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.fetch.subphase.highlight.HighlightBuilder;
 import org.elasticsearch.search.fetch.subphase.highlight.HighlightField;
@@ -88,7 +92,11 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
     }
 
     public ESSiteSearchAPI() {
-       this(APILocator.getESIndexAPI(), new ESMappingAPIImpl(), APILocator.getIndiciesAPI());
+       // Use the vendor-specific ESIndexAPI directly (NOT APILocator.getESIndexAPI(), which returns
+       // the phase-aware IndexAPIImpl router). The SiteSearchAPIImpl router is the single fan-out
+       // point for the ES → OS migration; routing index ops through the neutral router here as well
+       // would dual-write a second time and create duplicate OpenSearch indices.
+       this(new ESIndexAPI(), new ESMappingAPIImpl(), APILocator.getIndiciesAPI());
     }
 
     /**
@@ -100,18 +108,64 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
         if(LicenseUtil.getLevel() < LicenseLevel.STANDARD.level)
             return Collections.EMPTY_LIST;
 
-        final List<String> indices = new ArrayList<>();
-
-        indices.addAll(
-            indexApi.listIndices().stream()
-                    .filter(IndexType.SITE_SEARCH::is)
-                    .collect(Collectors.toList())
-        );
+        final List<String> indices = new ArrayList<>(indexApi.listIndices().stream()
+                .filter(IndexType.SITE_SEARCH::is)
+                .toList());
 
         Collections.sort(indices);
         Collections.reverse(indices);
         setDefaultToSpecificPosition(indices, 0);
         return indices;
+    }
+
+    /**
+     * Single-engine leaf: whether this Elasticsearch cluster holds the index. ES physical names carry
+     * no {@code .os} tag, so the logical name is used verbatim. The router aggregates this across all
+     * write engines (issue #36360).
+     */
+    @Override
+    public boolean existsOnAllWriteEngines(final String indexName) {
+        return indexApi.indexExists(indexName);
+    }
+
+    /** Single-engine leaf: nothing to compare against, so the mirror is trivially in sync (#36360). */
+    @Override
+    public boolean writeMirrorsInSync(final String indexName) {
+        return true;
+    }
+
+    /**
+     * Single-engine leaf: exact document count of this Elasticsearch index (plain name, no {@code .os}).
+     * Uses a dedicated {@code _count} request so the total is not capped at 10,000 like a default search,
+     * which would hide content drift above 10k docs in the mirror parity gate (issue #36360). Returns
+     * {@code 0} when the index is absent and {@code -1} when the count query fails.
+     */
+    @Override
+    public long documentCount(final String indexName) {
+        if (!indexApi.indexExists(indexName)) {
+            return 0L;
+        }
+        try {
+            final CountRequest countRequest =
+                    new CountRequest(indexApi.getNameWithClusterIDPrefix(indexName));
+            final CountResponse response = RestHighLevelClientProvider.getInstance().getClient()
+                    .count(countRequest, RequestOptions.DEFAULT);
+            return response.getCount();
+        } catch (final Exception e) {
+            Logger.warn(this, String.format(
+                    "Site Search document count failed for ES index '%s': %s", indexName, e.getMessage()));
+            return -1L;
+        }
+    }
+
+    /**
+     * Elasticsearch adapter for the vendor-neutral alias handle. ES physical names never carry the
+     * {@code .os} tag, so the logical index list resolves directly — no re-tag/strip round-trip is
+     * needed (contrast {@code OSSiteSearchAPI#getAliasToIndexMap}, which must apply {@code .os}).
+     */
+    @Override
+    public Map<String, String> getAliasToIndexMap() {
+        return indexApi.getAliasToIndexMap(listIndices());
     }
 
     /**
@@ -351,7 +405,7 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
     }
 
     @Override
-    public synchronized boolean createSiteSearchIndex(String indexName, String alias, int shards) throws ElasticsearchException, IOException {
+    public synchronized boolean createSiteSearchIndex(String indexName, String alias, int shards) throws DotSearchException, IOException {
         if(indexName==null){
             return false;
         }
@@ -379,7 +433,7 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
             }
 
             if(i++ > 300){
-                throw new ElasticsearchException("index timed out creating");
+                throw new DotSearchException("index timed out creating");
             }
         }
 
@@ -387,8 +441,12 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
             indexApi.createAlias(indexName, alias);
         }
 
-        //put mappings
-        mappingAPI.putMapping(indexName, mapping);
+        // Put mappings on the ES index only. ESMappingAPIImpl.putMapping(String, String) is
+        // phase-dispatched and would fan out to OpenSearch, but SiteSearchAPIImpl is already the
+        // single fan-out point for site search (it invokes OSSiteSearchAPI separately, which owns
+        // its own untagged OS index + mapping). Fanning out here too would re-issue the mapping to
+        // a `.os`-tagged physical name that site-search OS indices never use → HTTP 404. Pin to ES.
+        mappingAPI.putMapping(List.of(indexName), mapping, IndexTag.ES);
 
         return true;
     }
@@ -634,7 +692,7 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
         }
 
         if ( indexName == null || !IndexType.SITE_SEARCH.is(indexName) ) {
-            throw new ElasticsearchException( indexName + " is not a sitesearch index or alias" );
+            throw new DotSearchException( indexName + " is not a sitesearch index or alias" );
         }
 
         //https://github.com/elasticsearch/elasticsearch/issues/2980
@@ -648,10 +706,10 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
                     .timeout(TimeValue.timeValueMillis(INDEX_OPERATIONS_TIMEOUT_IN_MS)));
 
             final SearchResponse response = client.search(request, RequestOptions.DEFAULT);
-            return response.getAggregations().asMap();
+            return Aggregation.from(response.getAggregations());
         } catch ( ElasticsearchException | IOException e ) {
             Logger.error( this.getClass(), "Error getting aggregations for query.\n" + e.getMessage(), e );
-            throw new ElasticsearchException( "Error getting aggregations for query.\n" + e.getMessage(), e );
+            throw new DotSearchException( "Error getting aggregations for query.\n" + e.getMessage(), e );
         }
     }
 
@@ -669,7 +727,7 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
         }
 
         if ( indexName == null || !IndexType.SITE_SEARCH.is(indexName ) ) {
-            throw new ElasticsearchException( indexName + " is not a sitesearch index or alias" );
+            throw new DotSearchException( indexName + " is not a sitesearch index or alias" );
         }
 
         //https://github.com/elasticsearch/elasticsearch/issues/2980
@@ -683,10 +741,10 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
                     .timeout(TimeValue.timeValueMillis(INDEX_OPERATIONS_TIMEOUT_IN_MS)));
 
             final SearchResponse response = client.search(request, RequestOptions.DEFAULT);
-            return response.getAggregations().asMap();
+            return Aggregation.from(response.getAggregations());
         } catch ( ElasticsearchException | IOException e ) {
             Logger.error( this.getClass(), "Error getting Facets for query.\n"  + e.getMessage(), e );
-            throw new ElasticsearchException( "Error getting Facets for query.\n"  + e.getMessage(), e );
+            throw new DotSearchException( "Error getting Facets for query.\n"  + e.getMessage(), e );
         }
     }
 
@@ -699,6 +757,29 @@ public class ESSiteSearchAPI implements SiteSearchAPI{
      * 4. Removes indices which were created in the last day from the list of indices to be removed.
      * 5. If there are any indices left to be removed, it logs their names and deletes them.
      */
+    @Override
+    public void deleteIndex(final String indexName) throws DotDataException, IOException {
+        if (LicenseUtil.getLevel() < LicenseLevel.STANDARD.level) {
+            return;
+        }
+        if (!IndexType.SITE_SEARCH.is(indexName)) {
+            throw new DotDataException("Index '" + indexName + "' is not a site-search index");
+        }
+        // Deletes only from THIS engine (indexApi is the direct ESIndexAPI, not the router) —
+        // the SiteSearchAPIImpl router is the single fan-out point. Site-search names are plain
+        // (no .os tag). Active-index protection is enforced by the router before dispatch.
+        // Idempotent per engine: during migration a site-search index can exist on only one engine
+        // (e.g. a Phase-0 ES-only index has no OpenSearch twin), so skip when it is absent here
+        // rather than letting deleteMultiple throw index_not_found and crash the fan-out — which
+        // would otherwise abort the Site Search build mid-switch (issue #36360, I-7).
+        if (!indexApi.indexExists(indexName)) {
+            Logger.info(this.getClass(),
+                    "Site-search index '" + indexName + "' is absent on this engine; nothing to delete.");
+            return;
+        }
+        indexApi.deleteMultiple(new String[]{indexName});
+    }
+
     public void deleteOldSiteSearchIndices(){
         //Get All SiteSearch Indices
         final List<String> indicesToRemove = new ArrayList<>();
